--- a/public/index.html
+++ b/public/index.html
@@ -37,4 +37,12 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+  <script>
+      function calcVH() {
+        var vH = Math.max(document.documentElement.clientHeight, window.innerHeight || 0);
+        document.getElementById("shame-app").setAttribute("style", "height:" + vH + "px;");
+        }
+      this.calcVH();
+      window.addEventListener('onorientationchange', calcVH, true);
+    </script>
 </html>
